--- a/document_page_approval/i18n/document_page_approval.pot
+++ b/document_page_approval/i18n/document_page_approval.pot
@@ -4,8 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2022-07-27 11:14+0000\n"
+"PO-Revision-Date: 2022-07-27 11:14+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -121,6 +123,11 @@ msgid "Attachment Count"
 msgstr ""
 
 #. module: document_page_approval
+#: model:mail.template,name:document_page_approval.email_template_new_draft_need_approval
+msgid "Automated new draft need approval Notification Mail"
+msgstr ""
+
+#. module: document_page_approval
 #: model_terms:ir.ui.view,arch_db:document_page_approval.wiki_history_form_inherit
 msgid "Back to draft"
 msgstr ""
@@ -158,19 +165,13 @@ msgstr ""
 #. module: document_page_approval
 #: code:addons/document_page_approval/models/document_page_history.py:0
 #, python-format
-msgid "Change request <b>%s</b> has been cancelled by %s."
+msgid "Change request <b>%(name)s</b> has been cancelled by %(user)s."
 msgstr ""
 
 #. module: document_page_approval
 #: code:addons/document_page_approval/models/document_page_history.py:0
 #, python-format
 msgid "Change request has been approved by %s."
-msgstr ""
-
-#. module: document_page_approval
-#: model:ir.model.fields,field_description:document_page_approval.field_document_page__display_name
-#: model:ir.model.fields,field_description:document_page_approval.field_document_page_history__display_name
-msgid "Display Name"
 msgstr ""
 
 #. module: document_page_approval
@@ -195,11 +196,6 @@ msgid "Followers"
 msgstr ""
 
 #. module: document_page_approval
-#: model:ir.model.fields,field_description:document_page_approval.field_document_page_history__message_channel_ids
-msgid "Followers (Channels)"
-msgstr ""
-
-#. module: document_page_approval
 #: model:ir.model.fields,field_description:document_page_approval.field_document_page_history__message_partner_ids
 msgid "Followers (Partners)"
 msgstr ""
@@ -211,18 +207,17 @@ msgstr ""
 
 #. module: document_page_approval
 #: model:ir.model.fields,field_description:document_page_approval.field_document_page__has_changes_pending_approval
-msgid "Has changes pending approval"
+msgid "Has Changes Pending Approval"
+msgstr ""
+
+#. module: document_page_approval
+#: model:ir.model.fields,field_description:document_page_approval.field_document_page_history__has_message
+msgid "Has Message"
 msgstr ""
 
 #. module: document_page_approval
 #: model:ir.model.fields,field_description:document_page_approval.field_document_page__history_ids
 msgid "History"
-msgstr ""
-
-#. module: document_page_approval
-#: model:ir.model.fields,field_description:document_page_approval.field_document_page__id
-#: model:ir.model.fields,field_description:document_page_approval.field_document_page_history__id
-msgid "ID"
 msgstr ""
 
 #. module: document_page_approval
@@ -233,7 +228,6 @@ msgstr ""
 
 #. module: document_page_approval
 #: model:ir.model.fields,help:document_page_approval.field_document_page_history__message_has_error
-#: model:ir.model.fields,help:document_page_approval.field_document_page_history__message_has_sms_error
 msgid "If checked, some messages have a delivery error."
 msgstr ""
 
@@ -246,12 +240,6 @@ msgstr ""
 #. module: document_page_approval
 #: model:ir.model.fields,field_description:document_page_approval.field_document_page_history__message_is_follower
 msgid "Is Follower"
-msgstr ""
-
-#. module: document_page_approval
-#: model:ir.model.fields,field_description:document_page_approval.field_document_page____last_update
-#: model:ir.model.fields,field_description:document_page_approval.field_document_page_history____last_update
-msgid "Last Modified on"
 msgstr ""
 
 #. module: document_page_approval
@@ -322,11 +310,6 @@ msgid "Require approval for changes on this page or its child pages."
 msgstr ""
 
 #. module: document_page_approval
-#: model:ir.model.fields,field_description:document_page_approval.field_document_page_history__message_has_sms_error
-msgid "SMS Delivery error"
-msgstr ""
-
-#. module: document_page_approval
 #: model_terms:ir.ui.view,arch_db:document_page_approval.wiki_history_form_inherit
 msgid "Send to Review"
 msgstr ""
@@ -378,16 +361,6 @@ msgstr ""
 #. module: document_page_approval
 #: model:ir.model.fields,help:document_page_approval.field_document_page__approver_gid
 msgid "Users must also belong to the Approvers group"
-msgstr ""
-
-#. module: document_page_approval
-#: model:ir.model.fields,field_description:document_page_approval.field_document_page_history__website_message_ids
-msgid "Website Messages"
-msgstr ""
-
-#. module: document_page_approval
-#: model:ir.model.fields,help:document_page_approval.field_document_page_history__website_message_ids
-msgid "Website communication history"
 msgstr ""
 
 #. module: document_page_approval
